--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
     // Agregar para trabajar con kapt
     id 'kotlin-kapt'
+    // Para dagger hilt
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -13,8 +15,8 @@ android {
         applicationId "pe.pcs.roommaestrodetalle"
         minSdk 23
         targetSdk 33
-        versionCode 3
-        versionName "1.0.3"
+        versionCode 4
+        versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -56,6 +58,10 @@ dependencies {
     // AdMob
     implementation 'com.google.android.gms:play-services-ads:21.2.0'
     implementation 'com.google.firebase:firebase-analytics:21.1.1'
+
+    // Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
