--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,11 @@
-/*buildscript {
-    dependencies {
-        classpath 'com.google.gms:google-services:4.3.13'
-        // Necesario para Crashlytics
-        //classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
-    }
-}*/
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+
+    // Para dagger hilt
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
 task clean(type: Delete) {
