--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "pe.pcs.roommaestrodetalle"
         minSdk 23
         targetSdk 33
-        versionCode 5
-        versionName "1.0.5"
+        versionCode 7
+        versionName "1.0.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -42,7 +42,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -52,12 +52,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
 
     //Room
-    implementation 'androidx.room:room-ktx:2.5.0-alpha03'
-    kapt 'androidx.room:room-compiler:2.5.0-alpha03'
+    implementation 'androidx.room:room-ktx:2.5.0-beta01' //2.5.0-alpha03
+    kapt 'androidx.room:room-compiler:2.5.0-beta01' //2.5.0-alpha03
 
     // AdMob
-    implementation 'com.google.android.gms:play-services-ads:21.2.0'
-    implementation 'com.google.firebase:firebase-analytics:21.1.1'
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
 
     // Dagger - Hilt
     implementation 'com.google.dagger:hilt-android:2.44'
