--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,20 +43,21 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     //Room
-    implementation 'androidx.room:room-ktx:2.5.0-beta01'
-    kapt 'androidx.room:room-compiler:2.5.0-beta01'
+    implementation 'androidx.room:room-ktx:2.5.0'
+    implementation 'androidx.core:core-ktx:+'
+    kapt 'androidx.room:room-compiler:2.5.0'
 
     // AdMob
-    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
     implementation 'com.google.firebase:firebase-analytics:21.2.0'
 
     // Dagger - Hilt
@@ -64,6 +65,6 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.44'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
