--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "pe.pcs.roommaestrodetalle"
         minSdk 23
         targetSdk 33
-        versionCode 8
-        versionName "1.0.8"
+        versionCode 9
+        versionName "1.0.9"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -53,7 +53,7 @@ dependencies {
 
     //Room
     implementation 'androidx.room:room-ktx:2.5.0'
-    implementation 'androidx.core:core-ktx:+'
+    implementation 'androidx.core:core-ktx:1.9.0'
     kapt 'androidx.room:room-compiler:2.5.0'
 
     // AdMob
