--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "pe.pcs.roommaestrodetalle"
         minSdk 23
         targetSdk 33
-        versionCode 15
-        versionName "1.0.15"
+        versionCode 16
+        versionName "1.0.16"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,6 +39,7 @@ android {
         viewBinding true
     }
     buildToolsVersion '33.0.0'
+    namespace 'pe.pcs.roommaestrodetalle'
 }
 
 dependencies {
@@ -58,7 +59,7 @@ dependencies {
 
     // AdMob
     implementation 'com.google.android.gms:play-services-ads:22.0.0'
-    implementation 'com.google.firebase:firebase-analytics:21.2.1'
+    implementation 'com.google.firebase:firebase-analytics:21.2.2'
 
     // Dagger - Hilt
     implementation 'com.google.dagger:hilt-android:2.44'
