--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-<!--
-android:theme="@style/SplashTheme"
-android:theme="@style/Theme.RoomMaestroDetalle.NoActionBar"
--->
+
     <application
         android:name=".RoomMaestroDetalleApp"
         android:allowBackup="true"
@@ -19,22 +16,22 @@ android:theme="@style/Theme.RoomMaestroDetalle.NoActionBar"
         android:theme="@style/Theme.RoomMaestroDetalle"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.registrarproducto.RegistrarProductoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/SplashTheme" >
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        </activity> <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
-
     </application>
 
 </manifest>
