--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:theme="@style/Theme.RoomMaestroDetalle"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.registrarproducto.RegistrarProductoActivity"
+            android:name=".ui.reportedetallepedido.ReporteDetallePedidoActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.registrarproducto.RegistrarProductoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/SplashTheme">
